; ModuleID = '/home/carl/AnghaBench/micropython/py/extr_objstr.c_mp_obj_str_get_data_no_check.c'
source_filename = "/home/carl/AnghaBench/micropython/py/extr_objstr.c_mp_obj_str_get_data_no_check.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @mp_obj_str_get_data_no_check(i64 %0, i64* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64*, align 8
  store i64 %0, i64* %4, align 8
  store i64* %1, i64** %5, align 8
  %6 = load i64, i64* %4, align 8
  %7 = call i64 @mp_obj_is_qstr(i64 %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %14

9:                                                ; preds = %2
  %10 = load i64, i64* %4, align 8
  %11 = call i32 @MP_OBJ_QSTR_VALUE(i64 %10)
  %12 = load i64*, i64** %5, align 8
  %13 = call i32* @qstr_data(i32 %11, i64* %12)
  store i32* %13, i32** %3, align 8
  br label %24

14:                                               ; preds = %2
  %15 = load i64, i64* %4, align 8
  %16 = inttoptr i64 %15 to %struct.TYPE_2__*
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = load i64*, i64** %5, align 8
  store i64 %18, i64* %19, align 8
  %20 = load i64, i64* %4, align 8
  %21 = inttoptr i64 %20 to %struct.TYPE_2__*
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 1
  %23 = load i32*, i32** %22, align 8
  store i32* %23, i32** %3, align 8
  br label %24

24:                                               ; preds = %14, %9
  %25 = load i32*, i32** %3, align 8
  ret i32* %25
}

declare dso_local i64 @mp_obj_is_qstr(i64) #1

declare dso_local i32* @qstr_data(i32, i64*) #1

declare dso_local i32 @MP_OBJ_QSTR_VALUE(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
